# avr_pico

./: .gitignore  Makefile  README.md  clean.sh  gcode.txt  make_all.sh  rules.mak  test.mak  vars.mak
examples/atmega_pwm/: Makefile  main.c
examples/blink_32k_osc/: Makefile  main.c
examples/blink_atmel328p/: Makefile  main.c
examples/blink_attiny84/: Makefile  main.c
examples/blink_attiny85/: main.c
examples/digital_pot_sweep/: Makefile  main.c
examples/ds3231/: Makefile  main.c
examples/ina260/: main.c
examples/ina260_with_oled/: Makefile  main.c
examples/lowpower/: Makefile  main.c
examples/ms8607/: Makefile  main.c
examples/ms8607_with_32k_osc/: Makefile  main.c
examples/nmea_oled/: Makefile  main.c
examples/oledm/: ssd1331.txt
examples/rotary_encoder/: Makefile  main.c
examples/test_input_attiny_85/: main.c
examples/twi_rtc_lowlevel/: Makefile  main.c
examples/uart/: Makefile  main.c
examples/uart_recv_oled/: Makefile  main.c
lib/: CMakeLists.txt  avr_flash.h
lib/adc/: adc.c  adc.h  adc_test.c
lib/adc/analyze/: Makefile  collect_raw_data.py  create_bin_files.py  raw_data_to_csv.py
lib/ds3231/: ds3231.c  ds3231.h  ds3231_test.c
lib/ina260/: ina260_test.c
lib/misc/: .gitignore  CMakeLists.txt  debounce.h  debounce_test.c  gimbal.c  gimbal.h  gimbal_state.h  gimbal_test.c  pin.h  pin_test_h_only.c
lib/oledm/: CMakeLists.txt  Makefile  bitmap_test.c  console.c  console.h  console_test.c  fixed_text_test.c  oledm_spi.c  oledm_spi.h  sh1106_test.c  sh1107.c  ssd1306.c  ssd1306_init_test.c  ssd1306_test.c  ssd1780.c  ssd1780_commands.h  ssd1780_lowlevel.c  ssd1780_lowlevel.h  ssd1780_test.c  text.c
lib/oledm/font/: CMakeLists.txt  custom_numbers_12x32.c  custom_numbers_12x32.h  custom_numbers_12x32.txt  custom_numbers_12x32.yaml  custom_numbers_28x32.c  custom_numbers_28x32.h  custom_numbers_28x32.txt  custom_numbers_28x32.yaml  terminus12x24.c  terminus12x24.h  terminus12x24.txt  terminus12x24.yaml  terminus16x32.c  terminus16x32.h  terminus16x32.txt  terminus16x32.yaml  terminus16x32_numbers.yaml  terminus16x32_upper.c  terminus16x32_upper.h  terminus16x32_upper.yaml  terminus6x8.c  terminus6x8.h  terminus6x8.txt  terminus6x8.yaml  terminus8x8.c  terminus8x8.h  terminus8x8.txt  terminus8x8.yaml
lib/oledm/tools/: common.py  make_fixed_ascii_font.py  make_var_font.py  txt_to_font.py
lib/petit_fatfs/: README.txt  avr_mmcp.c  pffArduino.h
lib/pstr/: CMakeLists.txt
lib/rf24/: README  rf24.c  rf24.h  xform_func.py
lib/servo/: servo_atmega.c  servo_atmega.h  servo_atmega_test.c  servo_attiny.c  servo_attiny.h  servo_attiny_test.c
lib/spi/: CMakeLists.txt  spi.h  spi_atmega.c  spi_attiny.c  spi_attiny_test.c  spi_pi_pico.c
lib/time/: measure.c  measure.h  measure_atmega.c  measure_atmega_test.c  measure_attiny84.c  measure_attiny85.c  measure_attiny85_test.c  measure_no_interrupt.h  measure_no_interrupt_atmega328p_timer0.c  measure_no_interrupt_atmega328p_timer0_test.c  timer_pwm.c  timer_pwm.h  timer_pwm_test.c
lib/twi/: twi_attiny.c  twi_attiny_test.c
projects/: epaper_clock_readme.txt  led_lamp_readme.txt  light_bulb_changer.txt
projects/battery_discharge_monitor/: Makefile  main.c
projects/coded_door/: Makefile  main.c
projects/led_kitchen_lights/: Makefile  main.c
test/: Readme.md  check_test_results.py  unit_test.c  unit_test.h
test/include/avr/: io.c  (+6 more)
(+191 files in other folders)
